old/talks/firewall/iptables
# Generated by iptables-save v1.2.8 on Wed Aug 25 17:52:34 2004
*nat
:PREROUTING ACCEPT [754:62334]
:POSTROUTING ACCEPT [113:7613]
:OUTPUT ACCEPT [113:7613]
-A POSTROUTING -s 192.168.100.0/255.255.255.0 -d ! 192.168.0.0/255.255.0.0 -j MASQUERADE 
COMMIT
# Completed on Wed Aug 25 17:52:34 2004
# Generated by iptables-save v1.2.8 on Wed Aug 25 17:52:34 2004
*filter
:INPUT ACCEPT [299:102205]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [23583:4465256]
:POLITE_REJECT - [0:0]
-A INPUT -s 127.0.0.0/255.0.0.0 -j ACCEPT 
-A INPUT -s 192.168.100.0/255.255.255.0 -j ACCEPT 
-A INPUT -p icmp -j ACCEPT 
-A INPUT -p udp -m state --state ESTABLISHED -j ACCEPT 
-A INPUT -p tcp -m state --state ESTABLISHED -j ACCEPT 
-A INPUT -p tcp -m conntrack --ctstate RELATED -m helper --helper ftp  -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp ! --tcp-flags SYN,RST,ACK SYN -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 443 -j ACCEPT 
-A POLITE_REJECT -p tcp -j REJECT --reject-with tcp-reset 
-A POLITE_REJECT -p udp -j REJECT --reject-with icmp-port-unreachable 
-A POLITE_REJECT -j REJECT --reject-with icmp-port-unreachable 
COMMIT
# Completed on Wed Aug 25 17:52:34 2004
